from abc import ABC, abstractmethod
from pynetqir.core.traslation import Executor

class Operation(ABC):
    pass